--- a/Rahul R.ipynb
+++ b/Rahul R.ipynb
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 232,
    "id": "ab991991",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1386,7 @@
        "[39717 rows x 111 columns]>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5499,7 +5499,7 @@
    "id": "f9656fcb",
    "metadata": {},
    "source": [
-    "Data Analysis:\n",
+    "# Data Analysis:\n",
     "\n",
     "* For Data Analysis, let's begin in understanding the loan_status.\n",
     "* loan_status is grouped as 'Fully Paid', 'Current' and 'Charged Off'.\n",
@@ -5728,7 +5728,7 @@
    "id": "3a08c509",
    "metadata": {},
    "source": [
-    "Count of Categorical and Numeric columns\n"
+    "#### Count of Categorical and Numeric columns\n"
    ]
   },
   {
